Changed window size from 97vh to 99vh to correct weird square spacing at higher side lengths.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 97vh;
+    height: 99vh;
     width: auto;
 }
 
